dataset1235/2025-2/805158916/users/720854925/executions/71079933_146336312.log
== SUBMISSION (2025-08-13 17:02:56)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros
print("cada guerreiro receberá",moedas_por_guerreiros,"moedas de ouro")
  print("o informante receberá",moedas_informante,"moedas de ouro")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 6
    print("o informante receberá",moedas_informante,"moedas de ouro")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 6
    print("o informante receberá",moedas_informante,"moedas de ouro")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 17:07:30)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros
print("cada guerreiro receberá",moedas_por_guerreiros,"moedas de ouro")
print("o informante receberá",moedas_informante,"moedas de ouro")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá 2 moedas de ouro
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá 2 moedas de ouro
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 17:07:36)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 17:08:30)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros
print(moedas_por_guerreiros)
print(moedas_informante)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 17:07:52)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 17:06:03)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros
print(f'cada guerreiro receberá {moedas_por_guerreiros} moedas de ouro')
print(f'o informante receberá {moedas_informante} moedas de ouro')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá 2 moedas de ouro
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá 2 moedas de ouro
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 17:07:37)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 00:02:56)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros
print(moedas_por_guerreiros)
print(moedas_informante)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 17:07:31)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros
print("cada guerreiro receberá",moedas_por_guerreiros,"moedas de ouro")
print("o informante receberá",moedas_informante,"moedas de ouro")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá 2 moedas de ouro
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá 2 moedas de ouro
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 17:06:01)
-- CODE: 
total_moedas=50
guerreiros=3
moedas_por_guerreiros=total_moedas//guerreiros
moedas_informante=total_moedas%guerreiros
print(f'cada guerreiro receberá {moedas_por_guerreiros} moedas de ouro')
print(f'o informante receberá {moedas_informante} moedas de ouro')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá 2 moedas de ouro
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
o informante receberá 2 moedas de ouro
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
